// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`init.behavior.sizes given: [case1] --size nano when: [t0] init.behavior executed with --size nano then: creates only nano-level files 1`] = `
[
  "0.wish.md",
  "1.vision.guard",
  "1.vision.stone",
  "5.1.execution.from_vision.v1.guard",
  "5.1.execution.from_vision.v1.stone",
  "5.3.verification.v1.guard",
  "5.3.verification.v1.stone",
  "refs/template.[feedback].v1.[given].by_human.md",
]
`;

exports[`init.behavior.sizes given: [case1] --size nano when: [t0] init.behavior executed with --size nano then: output matches snapshot 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 5.1.execution.from_vision.v1.guard
   ├─ + 5.1.execution.from_vision.v1.stone
   ├─ + 5.3.verification.v1.guard
   ├─ + 5.3.verification.v1.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.nano-test/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/size-nano-test <-> behavior v{DATE}.nano-test
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior.sizes given: [case2] --size mini when: [t0] init.behavior executed with --size mini then: creates mini-level files 1`] = `
[
  "0.wish.md",
  "1.vision.guard",
  "1.vision.stone",
  "2.1.criteria.blackbox.stone",
  "2.2.criteria.blackbox.matrix.stone",
  "3.1.3.research.internal.product.code.prod._.v1.stone",
  "3.1.3.research.internal.product.code.test._.v1.stone",
  "3.3.1.blueprint.product.v1.guard",
  "3.3.1.blueprint.product.v1.stone",
  "4.1.roadmap.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.guard",
  "5.1.execution.phase0_to_phaseN.v1.stone",
  "5.3.verification.v1.guard",
  "5.3.verification.v1.stone",
  "refs/template.[feedback].v1.[given].by_human.md",
]
`;

exports[`init.behavior.sizes given: [case2] --size mini when: [t0] init.behavior executed with --size mini then: output matches snapshot 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.test._.v1.stone
   ├─ + 3.3.1.blueprint.product.v1.guard
   ├─ + 3.3.1.blueprint.product.v1.stone
   ├─ + 4.1.roadmap.v1.stone
   ├─ + 5.1.execution.phase0_to_phaseN.v1.guard
   ├─ + 5.1.execution.phase0_to_phaseN.v1.stone
   ├─ + 5.3.verification.v1.guard
   ├─ + 5.3.verification.v1.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.mini-test/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/size-mini-test <-> behavior v{DATE}.mini-test
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior.sizes given: [case3] --size medi (default) when: [t0] init.behavior executed without --size flag then: creates medi-level files (default) 1`] = `
[
  "0.wish.md",
  "1.vision.guard",
  "1.vision.stone",
  "2.1.criteria.blackbox.stone",
  "2.2.criteria.blackbox.matrix.stone",
  "2.3.criteria.blueprint.stone",
  "3.1.1.research.external.product.access._.v1.stone",
  "3.1.1.research.external.product.claims._.v1.stone",
  "3.1.3.research.internal.product.code.prod._.v1.stone",
  "3.1.3.research.internal.product.code.test._.v1.stone",
  "3.1.5.research.reflection.product.audience._.v1.stone",
  "3.1.5.research.reflection.product.premortem._.v1.stone",
  "3.1.5.research.reflection.product.rootcause._.v1.stone",
  "3.2.distill.repros.experience._.v1.guard",
  "3.2.distill.repros.experience._.v1.stone",
  "3.3.1.blueprint.product.v1.guard",
  "3.3.1.blueprint.product.v1.stone",
  "4.1.roadmap.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.guard",
  "5.1.execution.phase0_to_phaseN.v1.stone",
  "5.2.evaluation.v1.guard",
  "5.2.evaluation.v1.stone",
  "5.3.verification.v1.guard",
  "5.3.verification.v1.stone",
  "5.5.playtest.v1.guard",
  "5.5.playtest.v1.stone",
  "refs/template.[feedback].v1.[given].by_human.md",
]
`;

exports[`init.behavior.sizes given: [case3] --size medi (default) when: [t0] init.behavior executed without --size flag then: output matches snapshot 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.v1.stone
   ├─ + 3.1.1.research.external.product.claims._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.test._.v1.stone
   ├─ + 3.1.5.research.reflection.product.audience._.v1.stone
   ├─ + 3.1.5.research.reflection.product.premortem._.v1.stone
   ├─ + 3.1.5.research.reflection.product.rootcause._.v1.stone
   ├─ + 3.2.distill.repros.experience._.v1.guard
   ├─ + 3.2.distill.repros.experience._.v1.stone
   ├─ + 3.3.1.blueprint.product.v1.guard
   ├─ + 3.3.1.blueprint.product.v1.stone
   ├─ + 4.1.roadmap.v1.stone
   ├─ + 5.1.execution.phase0_to_phaseN.v1.guard
   ├─ + 5.1.execution.phase0_to_phaseN.v1.stone
   ├─ + 5.2.evaluation.v1.guard
   ├─ + 5.2.evaluation.v1.stone
   ├─ + 5.3.verification.v1.guard
   ├─ + 5.3.verification.v1.stone
   ├─ + 5.5.playtest.v1.guard
   ├─ + 5.5.playtest.v1.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.medi-default-test/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/size-medi-default-test <-> behavior v{DATE}.medi-default-test
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior.sizes given: [case4] --size mega when: [t0] init.behavior executed with --size mega then: creates mega-level files 1`] = `
[
  "0.wish.md",
  "1.vision.guard",
  "1.vision.stone",
  "2.1.criteria.blackbox.stone",
  "2.2.criteria.blackbox.matrix.stone",
  "2.3.criteria.blueprint.stone",
  "3.1.1.research.external.product.access._.v1.stone",
  "3.1.1.research.external.product.claims._.v1.stone",
  "3.1.1.research.external.product.domain._.v1.stone",
  "3.1.1.research.external.product.domain.terms.v1.stone",
  "3.1.1.research.external.product.references._.v1.stone",
  "3.1.2.research.external.factory.oss.levers._.v1.stone",
  "3.1.2.research.external.factory.templates._.v1.stone",
  "3.1.2.research.external.factory.testloops._.v1.stone",
  "3.1.3.research.internal.product.code.prod._.v1.stone",
  "3.1.3.research.internal.product.code.test._.v1.stone",
  "3.1.4.research.internal.factory.blockers._.v1.stone",
  "3.1.4.research.internal.factory.opports._.v1.stone",
  "3.1.5.research.reflection.product.audience._.v1.stone",
  "3.1.5.research.reflection.product.premortem._.v1.stone",
  "3.1.5.research.reflection.product.rootcause._.v1.stone",
  "3.2.distill.domain._.v1.guard",
  "3.2.distill.domain._.v1.stone",
  "3.2.distill.factory.upgrades._.v1.stone",
  "3.2.distill.repros.experience._.v1.guard",
  "3.2.distill.repros.experience._.v1.stone",
  "3.3.0.blueprint.factory.v1.stone",
  "3.3.1.blueprint.product.v1.guard",
  "3.3.1.blueprint.product.v1.stone",
  "4.1.roadmap.v1.stone",
  "5.1.execution.phase0_to_phaseN.v1.guard",
  "5.1.execution.phase0_to_phaseN.v1.stone",
  "5.2.evaluation.v1.guard",
  "5.2.evaluation.v1.stone",
  "5.3.verification.v1.guard",
  "5.3.verification.v1.stone",
  "5.5.playtest.v1.guard",
  "5.5.playtest.v1.stone",
  "refs/template.[feedback].v1.[given].by_human.md",
]
`;

exports[`init.behavior.sizes given: [case4] --size mega when: [t0] init.behavior executed with --size mega then: output matches snapshot 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.v1.stone
   ├─ + 3.1.1.research.external.product.claims._.v1.stone
   ├─ + 3.1.1.research.external.product.domain._.v1.stone
   ├─ + 3.1.1.research.external.product.domain.terms.v1.stone
   ├─ + 3.1.1.research.external.product.references._.v1.stone
   ├─ + 3.1.2.research.external.factory.oss.levers._.v1.stone
   ├─ + 3.1.2.research.external.factory.templates._.v1.stone
   ├─ + 3.1.2.research.external.factory.testloops._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.test._.v1.stone
   ├─ + 3.1.4.research.internal.factory.blockers._.v1.stone
   ├─ + 3.1.4.research.internal.factory.opports._.v1.stone
   ├─ + 3.1.5.research.reflection.product.audience._.v1.stone
   ├─ + 3.1.5.research.reflection.product.premortem._.v1.stone
   ├─ + 3.1.5.research.reflection.product.rootcause._.v1.stone
   ├─ + 3.2.distill.domain._.v1.guard
   ├─ + 3.2.distill.domain._.v1.stone
   ├─ + 3.2.distill.factory.upgrades._.v1.stone
   ├─ + 3.2.distill.repros.experience._.v1.guard
   ├─ + 3.2.distill.repros.experience._.v1.stone
   ├─ + 3.3.0.blueprint.factory.v1.stone
   ├─ + 3.3.1.blueprint.product.v1.guard
   ├─ + 3.3.1.blueprint.product.v1.stone
   ├─ + 4.1.roadmap.v1.stone
   ├─ + 5.1.execution.phase0_to_phaseN.v1.guard
   ├─ + 5.1.execution.phase0_to_phaseN.v1.stone
   ├─ + 5.2.evaluation.v1.guard
   ├─ + 5.2.evaluation.v1.stone
   ├─ + 5.3.verification.v1.guard
   ├─ + 5.3.verification.v1.stone
   ├─ + 5.5.playtest.v1.guard
   ├─ + 5.5.playtest.v1.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.mega-test/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/size-mega-test <-> behavior v{DATE}.mega-test
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior.sizes given: [case6] --size composes with --guard when: [t0] init.behavior executed with --size mini --guard heavy then: output matches snapshot 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.guard
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.test._.v1.stone
   ├─ + 3.3.1.blueprint.product.v1.guard
   ├─ + 3.3.1.blueprint.product.v1.stone
   ├─ + 4.1.roadmap.v1.stone
   ├─ + 5.1.execution.phase0_to_phaseN.v1.guard
   ├─ + 5.1.execution.phase0_to_phaseN.v1.stone
   ├─ + 5.3.verification.v1.guard
   ├─ + 5.3.verification.v1.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.compose-test/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/size-guard-compose-test <-> behavior v{DATE}.compose-test
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;
